youtube and content

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
             <div class="container">
               <div class="quotation span12 clearfix">
               <div class="quotation-mark"></div>
-                <p>Born with a motto to promote new inventions and technology in the areas of computers, HeadStart has surpasses 10 years of creating a technology spectacle year after year at CBIT, HYDERABAD. It is today one of the most successful fests ever in Hyderabad with a turnout of around 6000 participants every year and a reach of around of 200 colleges whole country wide.</p>
-                <br>
-<p>Its aim is to provide a national platform for the youth to showcase their talents and skill sets in fierce competitions, display cutting edge technology, HeadStart strives for one and all to get inspired and look up to.
-We are very established and have a very dedicated team that work every year for motivating youth and giving them a national level platform to prove themselves. </p>
+                <p>Its aim is to provide a national platform for the youth to showcase their talents and skill sets in fierce competitions, display cutting edge technology, HeadStart strives for one and all to get inspired and look up to. We are very established and have a very dedicated team that work every year for motivating youth and giving them a national level platform to prove themselves. </p>
                 
             </div>
+           <iframe width="620" height="315"
+                  src="http://www.youtu.be/j3lf4gXeLeU">
+            </iframe>
             </div>
             
           </section>
@@ -428,7 +428,7 @@ We are very established and have a very dedicated team that work every year for 
 
               <ul class="og-grid ourHolder">
                 <li class="item-p" data-id="id-1" data-type="programming">
-                  <a href="http://www.google.com" data-largesrc="img/works/w1_s.jpg" data-title="Are you a coding geek? So this one is for you. <em> KODECRYPT </em> is a national level coding competition with three different levels of complexity.<br> <em> Team : Max team of 2 </em>" data-category="Well “one” says it all. Its little bit less complex. So to make it easy for you this round is very simple one with basic MCQ’s of C, C++ and java." data-roundone="Brand" data-roundtwo="Let’s start with a little bit of coding from here. All you have to do is just write the logic of the problem statement given. " data-description="Round-3: So here comes the final round. Once you reach here you are the almost the ”winner”. This round is last and final round with complete coding.</h5>">
+                  <a href="/registration" data-largesrc="img/works/w1_s.jpg" data-title="Are you a coding geek? So this one is for you. <em> KODECRYPT </em> is a national level coding competition with three different levels of complexity.<br> <em> Team : Max team of 2 </em>" data-category="Well “one” says it all. Its little bit less complex. So to make it easy for you this round is very simple one with basic MCQ’s of C, C++ and java." data-roundone="Brand" data-roundtwo="Let’s start with a little bit of coding from here. All you have to do is just write the logic of the problem statement given. " data-description="Round-3: So here comes the final round. Once you reach here you are the almost the ”winner”. This round is last and final round with complete coding.</h5>">
                     <span class="figcap"></span>
                     <img src="img/works/w1_s.jpg" alt="KodeCrypt"/>
                     <h2>KodeCrypt</h2>
@@ -437,7 +437,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-2" data-type="database">
-                  <a href="#" data-largesrc="img/works/w2_s.jpg" data-title="Fed up with coding?...Here is DATA ADDICTS a national level querying competition challenging you geeks on the concepts of DBMS. <br> <em> Team : Max team of 2   Registration fee:150/-(per team)</em>" data-category="(online)This round questions you with basic mcq's related to DBMS/PLSQL.Done with this?Then grab your participation certificates" data-roundtwo="(onsite) This round consists of simple queries to answer.You will be given Merit certificates if you qualify here. Guys...tough competition though." data-description="(onsite)Finally done!All right,Just a step away.. Challenge your opponents with your queries..Grab exciting prizes..Come lets's win the battle.">
+                  <a href="/registration" data-largesrc="img/works/w2_s.jpg" data-title="Fed up with coding?...Here is DATA ADDICTS a national level querying competition challenging you geeks on the concepts of DBMS. <br> <em> Team : Max team of 2   Registration fee:150/-(per team)</em>" data-category="(online)This round questions you with basic mcq's related to DBMS/PLSQL.Done with this?Then grab your participation certificates" data-roundtwo="(onsite) This round consists of simple queries to answer.You will be given Merit certificates if you qualify here. Guys...tough competition though." data-description="(onsite)Finally done!All right,Just a step away.. Challenge your opponents with your queries..Grab exciting prizes..Come lets's win the battle.">
                     <span class="figcap"></span>
                     <img src="img/works/w2_s.jpg" alt="Etiam Placerat"/>
                     <h2>Data Addicts</h2>
@@ -446,7 +446,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-3" data-type="programming">
-                  <a href="#" data-largesrc="img/works/w3_s.jpg" data-title="C Star is three round event coompletely based on C. <br> <em> Team : Only one   Registration fee:50/-(per team)</em>" data-category="First round is a MCQ based round where basic C questions are asked" data-roundtwo="<b>Find the output.</b> Here you are given a code and asked to find the output for it" data-description="Round 3:<b> Correct Me </b> Here you are given a code with errors and you have to debug it.">
+                  <a href="/registration" data-largesrc="img/works/w3_s.jpg" data-title="C Star is three round event coompletely based on C. <br> <em> Team : Only one   Registration fee:50/-(per team)</em>" data-category="First round is a MCQ based round where basic C questions are asked" data-roundtwo="<b>Find the output.</b> Here you are given a code and asked to find the output for it" data-description="Round 3:<b> Correct Me </b> Here you are given a code with errors and you have to debug it.">
                     <span class="figcap"></span>
                     <img src="img/works/w3_s.jpg" alt="Egestas Ornare"/>
                     <h2>C Star</h2>
@@ -455,7 +455,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-4" data-type="ideas">
-                  <a href="#" data-largesrc="img/works/w4_s.jpg" data-title="Ever dreamed of ruling  the  world of technology here is the war then ,do you have enough tech stuff lets check it out then." data-category="(techcasino):- Each team starts with a virtual cash of Rs5000/                                    so u have to buy questions of Rs 100 or 200 or 500 or 1000 if u can solve it u get additonal cash or if ur unable to solve u can sell it" data-roundtwo="(divide and conquer):- getting close to the destination. The teams with higher amount of cash qualify to round 2 u can buy a country and capture other countries by answering sets of 3 questions" data-description="">
+                  <a href="/registration" data-largesrc="img/works/w4_s.jpg" data-title="Ever dreamed of ruling  the  world of technology here is the war then ,do you have enough tech stuff lets check it out then." data-category="(techcasino):- Each team starts with a virtual cash of Rs5000/                                    so u have to buy questions of Rs 100 or 200 or 500 or 1000 if u can solve it u get additonal cash or if ur unable to solve u can sell it" data-roundtwo="(divide and conquer):- getting close to the destination. The teams with higher amount of cash qualify to round 2 u can buy a country and capture other countries by answering sets of 3 questions" data-description="">
                     <span class="figcap"></span>
                     <img src="img/works/w4_s.jpg" alt="Degnissim"/>
                     <h2>Technopoly</h2>
@@ -464,7 +464,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-5" data-type="web-design">
-                  <a href="#" data-largesrc="img/works/w5_s.jpg" data-title="Eget Justo" data-category="Web design" data-client="Brand" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet.">
+                  <a href="/registration" data-largesrc="img/works/w5_s.jpg" data-title="Showcase your webdesigning skills. Its all about Web Designing using html. <br> <em>Team Size: 2 per Team  Fee: 150/- per team</em>" data-category="" data-roundtwo="" data-description="">
                     <span class="figcap"></span>
                     <img src="img/works/w5_s.jpg" alt="Eget Justo"/>
                     <h2>Design Freaks</h2>
@@ -473,7 +473,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-6" data-type="ideas">
-                  <a href="#" data-largesrc="img/works/w6_s.jpg" data-title="Bibendum" data-category="Other" data-client="Brand" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet.">
+                  <a href="/registration" data-largesrc="img/works/w6_s.jpg" data-title="Its formal event of presenting a paper on your interested topic. Rules are available when you enroll for the event for free." data-category="" data-roundtwo="" data-description="">
                     <span class="figcap"></span>
                     <img src="img/works/w6_s.jpg" alt="Bibendum"/>
                     <h2>Paper Presentation</h2>
@@ -482,7 +482,7 @@ We are very established and have a very dedicated team that work every year for 
                   </a>
                 </li>
                 <li class="item-p" data-id="id-7" data-type="ideas">
-                  <a href="#" data-largesrc="img/works/w7_s.jpg" data-title="Bibendum" data-category="Other" data-client="Brand" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet.">
+                  <a href="/registration" data-largesrc="img/works/w7_s.jpg" data-title="Its all about presenting an idea you have in the form of a video" data-category="You have to present the idea in college if your idea is shortlisted." data-roundtwo="" data-description="">
                     <span class="figcap"></span>
                     <img src="img/works/w7_s.jpg" alt="Bibendum"/>
                     <h2>i-Thoughts</h2>
