--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <!-- Custom styles -->
     <link href="css/custom.css" rel="stylesheet" media="screen">
-    <link href="css/animations.css" rel="stylesheet" media="screen">
+    <link href="css/animations.css" rel="stylesheet" media="screen">i
       <meta charset="utf-8">
 
   
@@ -256,7 +256,7 @@
                 
             </div>
            <iframe width="620" height="315"
-                  src="http://www.youtu.be/j3lf4gXeLeU">
+                  src="">
             </iframe>
             </div>
             
