--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
                   </a>
                 </li>
                 <li class="item-p" data-id="id-6" data-type="ideas">
-                  <a href="/registration" data-largesrc="img/works/w6_s.jpg" data-title="Its formal event of presenting a paper on your interested topic. Rules are available when you enroll for the event for free." data-category="" data-roundtwo="" data-description="">
+                  <a href="/registration" data-largesrc="img/works/w6_s.jpg" data-title="Its formal event of presenting a paper on your interested topic. Rules are available when you enroll for the event for free." data-category="Abstracts have to be mailed to pptheadstart@gmail.com. Details about event are available after you register for the event." data-roundtwo="Presentations have to be given onsite." data-description="">
                     <span class="figcap"></span>
                     <img src="img/works/w6_s.jpg" alt="Bibendum"/>
                     <h2>Paper Presentation</h2>
-                    <h3>Contact: 999999999</h3>
+                    <h3>Contact: 9908116136</h3>
                     <span class="arrow"></span>
                   </a>
                 </li>
