--- a/index.html
+++ b/index.html
@@ -20,25 +20,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- Core Meta Data -->
-  <meta name="author" content="Matthew Wagerfield">
-  <meta name="description" content="Simple, lightweight Parallax Engine that reacts to the orientation of a smart device">
-  <meta name="keywords" content="parallax,javascript,jquery,zepto,plugin">
+  <meta name="author" content="CBIT, Telangana">
+  <meta name="description" content="HeadStart, A National Level Technical Symposium organized by CBIT">
+  <meta name="keywords" content="HeadStart,CBIT,Telangana,KodeCrypt,Design Freaks,Data Addicts,C Star,Technopoly,i-Thoughts,Paper Presentation">
 
-  <!-- Open Graph Meta Data -->
-  <meta property="og:description" content="Simple, lightweight Parallax Engine that reacts to the orientation of a smart device">
-  <meta property="og:image" content="http://wagerfield.github.io/parallax/assets/images/thumbnail.png">
-  <meta property="og:site_name" content="parallax.js">
-  <meta property="og:title" content="parallax.js">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://wagerfield.github.io/parallax/index.html">
+  
 
-  <!-- Twitter Card Meta Data -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="http://wagerfield.github.io/parallax/index.html">
-  <meta name="twitter:creator" content="@wagerfield">
-  <meta name="twitter:title" content="parallax.js">
-  <meta name="twitter:description" content="Simple, lightweight Parallax Engine that reacts to the orientation of a smart device">
-  <meta name="twitter:image" content="http://wagerfield.github.io/parallax/assets/images/thumbnail.png">
+  
 
   <!-- Humans -->
   <link rel="author" href="humans.txt" />
