--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                         <p>Born with a motto to promote new inventions and technology in the areas of computers, HeadStart has surpasses 10 years of creating a technology spectacle year after year at CBIT, HYDERABAD. It is today one of the most successful fests ever in Hyderabad with a turnout of around 6000 participants every year and a reach of around of 200 colleges whole country wide.</p>
             <ul class="links">
               <li><a class="github" href="#works" onclick="gotoPageWithTrans4(3)">Events</a></li>
-              <li><a class="download" href="/registration">Register</a></li>
-              <!--li><a class="download" href="#blog" onclick="gotoPageWithTrans4(5)">Sponsors</a></li-->
               <li><a class="download" href="#about" onclick="gotoPageWithTrans4(1)">About HeadStart</a></li>
+              <li><a class="download" href="/registration">Register</a></li>
+              <li><a class="download" href="/test/login/index.php">Login</a></li>
               <li><a class="download" href="#team" onclick="gotoPageWithTrans1(2)">Our Team</a></li>
               <li><a class="download" href="#contacts" onclick="gotoPageWithTrans4(4)">Contact Us</a></li>
            
