--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@
                   </a>
                 </li>
                 <li class="item-p" data-id="id-5" data-type="web-design">
-                  <a href="/registration" data-largesrc="img/works/w5_s.jpg" data-title="Showcase your webdesigning skills. Its all about Web Designing using html. <br> <em>Team Size: 2 per Team  Fee: 150/- per team</em>" data-category="" data-roundtwo="" data-description="">
+                  <a href="/registration" data-largesrc="img/works/w5_s.jpg" data-title="Are you a DESIGN FREAK ? Here is your chance to test your grey cells on Web Designing. <br> <em>Team Size: 2 per Team  Fee: 100/- per team</em>" data-category=" Online , 20 MCQ's - 30 mins" data-roundtwo=" On Campus , 3 HTML tasks - 1 hour. Fee : Rs 100 per team (max two members per team). Participation certificates will be given." data-description="On Campus ,short listed 20 members ,Static webpage designing , Merit Certificates. Internship for winners.">
                     <span class="figcap"></span>
                     <img src="img/works/w5_s.jpg" alt="Eget Justo"/>
                     <h2>Design Freaks</h2>
-                    <h3>Contact: 999999999</h3>
+                    <h3>Contact: 9491593642</h3>
                     <span class="arrow"></span>
                   </a>
                 </li>
