--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                 <a href="#" class="category" data-target="database">Database</a>
                 <a href="#" class="category" data-target="web-design">Web Design</a>
                 <a href="#" class="category" data-target="ideas">Ideas</a>
+                <a href="payment.html" class="category">Event Fee</a> //Add payment.html, im sending it.
                 <div class="clearfix"></div>
             </div>
             <div class="clearfix"></div>
