--- a/index.html
+++ b/index.html
@@ -534,14 +534,13 @@
               </div>
               <div class="span4">
                 <h2>Phone</h2>
-                <p>Shashank: +91 9700 (678) 403 	</p>
+                <p>Sai Ram: +91 9703 (896) 070 	</p>
                 
               </div>
               <div class="span4">
                 <h2>Email</h2>
                 <p>Support: <a href="mailto:support@example.com" title="mailto:support@example.com">headstart@cbit.ac.in</a></p>
-                <p>Director: <a href="mailto:chief@example.com" title="mailto:chief@example.com">chief@example.com</a></p>
-              </div>
+                </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4264661662482!2d78.31926944313052!3d17.391309710794836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb94eba8ad7c87%3A0xb78f51ed556f7cc5!2sChaitanya+Bharathi+Institute+of+Technology!5e0!3m2!1sen!2s!4v1442573336094" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </section>
